gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whereami-gateway
  namespace: asm-ingress
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https-whereami
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: whereami-credential
    hosts:
    - whereami.miguelmendoza.demo.altostrat.com
